# ModernReader

./: .gitignore  ACM_Paper.md  ALL_MODULES_FINAL_SUMMARY.md  CLEANUP_GUIDE.md  CONTENT_PLATFORM.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SECURITY.md  DEV_ENVIRONMENT_COMPLETE.md  ENV_SETUP.md  FINAL_DEVELOPMENT_REPORT.md  FRONTEND_COMPLETION_REPORT.md  GLOBAL_INDIGENOUS_LANGUAGES_COMPLETE.md  GLOBAL_INDIGENOUS_LANGUAGES_EXTENSION.md  HUGGINGFACE_SETUP.md  IEEE_Paper_Draft.md  IMPLEMENTATION_BLUEPRINT.md  IMPLEMENTATION_SUMMARY.md  INDIGENOUS_LANGUAGES_COMPLETION.md  LOCALHOST_RUN_SETUP.md  MODERNREADEER  MODERNREADEER.pub  ModernReader_Research_Report.md  OAUTH_SETUP_GUIDE.md  PRODUCTION_CICD_COMPLETE.md  PRODUCTION_CICD_GUIDE.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  Reader.me  UPDATE_SUMMARY.md  app.js  arXiv_Paper_Draft.md  build_modernreader_canva_assets.py  cleanup.sh  docker-compose.yml  generate_modernreader_logo.py  index.html  modernreader_canva_outline 17.01.51.md  package-lock.json  (+10 more)
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  llm_config.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  base.py  catalog.py  consent.py  content.py  email_verification.py  epaper.py  gamification.py  indigenous_language.py  prototype.py  session.py  (+3 more)
backend/scripts/: add_user_profile_fields.py  bootstrap_db.py  generate_podcasts.py  ingest_public_catalog.py  init_db.py  seed_catalog.py
backend/tests/: test_prototype.py
(+766 files in other folders)
